--- a/frontend/src/app/visualization/visualization.component.css
+++ b/frontend/src/app/visualization/visualization.component.css
@@ -20,6 +20,7 @@ span.folder {
 
 #blocks{
 	height: 50vh;
+
 }
 
 .explorerList {
@@ -49,8 +50,21 @@ span.folder {
 
 .folderBlock{
 	width: 100%;
-	height: 100%;
+	height: max-content;
 	outline: 1px black solid;
+	/* display: inline-block; */
+	padding: 30px;
+}
+
+.fileBlock{
+	background-color: #008800;
+
+	/* height: max-content; */
+	height: 10px;
+	outline: black 1px dashed;
+	white-space: nowrap;
+	/* display: inline-block; */
+	/* float: left; */
 }
 
 .typeBlock{
@@ -58,9 +72,7 @@ span.folder {
 }
 
 .typeExtension{
- 
 }
 
 .typeNumber{
-	
 }
