--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -65,8 +65,8 @@
 	</div>
 
 	<div class="row">
-		<highcharts-chart class="" [Highcharts]="typesHistogram" [options]="typesHistogramOptions"
-			style="width: 100%; display: block"></highcharts-chart>
+		<!-- <highcharts-chart class="" [Highcharts]="typesHistogram" [options]="typesHistogramOptions"
+			style="width: 100%; display: block"></highcharts-chart> -->
 	</div>
 
 	<div class="row">
@@ -384,7 +384,6 @@
 					</div>
 				</div>
 			</div>
-
 
 			<!-- <div class="container-fluid" style="height: 100%">
 				<div class="row">
