--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -50,17 +50,6 @@
 		<div id="fileTypes" class="col-3" style="outline: 1px black solid">
 			<h1>File Types</h1>
 
-
-			<!-- 		<div>
-				<ul>
-					<li *ngFor="let item of this.fileTypes" [item]="item">
-						<div>
-							{{item}}
-						</div>
-					</li>
-				</ul>
-			</div> -->
-
 		</div>
 	</div>
 
@@ -73,7 +62,7 @@
 		<div id="blocks" class="col-12" style="outline: 1px black solid">
 			<h1>Blocks</h1>
 
-			<div _ngcontent-xru-c16="" class="folderBlock">
+			<!-- <div _ngcontent-xru-c16="" class="folderBlock">
 				<div _ngcontent-xru-c16="" class="fileBlock" style="width: 53.3898%;   ">
 				</div>
 				<div _ngcontent-xru-c16="" class="fileBlock" style="width: 4.94875%;   ">
@@ -382,11 +371,6 @@
 							<div _ngcontent-xru-c16="" class="fileBlock" style="width: 0.567815%;   "></div>
 						</div>
 					</div>
-				</div>
-			</div>
-
-			<!-- <div class="container-fluid" style="height: 100%">
-				<div class="row">
 				</div>
 			</div> -->
 		</div>
