--- a/frontend/src/app/visualization/visualization.component.html
+++ b/frontend/src/app/visualization/visualization.component.html
@@ -60,7 +60,7 @@
 
 	<div class="row">
 		<div id="blocks" class="col-12" style="outline: 1px black solid">
-			<h1>Blocks</h1>
+			<!-- <h1>Blocks</h1> -->
 
 			<!-- <div _ngcontent-xru-c16="" class="folderBlock">
 				<div _ngcontent-xru-c16="" class="fileBlock" style="width: 53.3898%;   ">
